--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -11,7 +11,8 @@
     "meteor-node-stubs": "^0.3.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-hot-loader": "^4.1.3"
+    "react-hot-loader": "^4.1.3",
+    "react-mounter": "^1.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
